ensure contenteditables are visible

--- a/public/styles/custom.less
+++ b/public/styles/custom.less
@@ -208,3 +208,11 @@ a {
 #article-sidebar .tag a {
   color: rgb(220, 210, 240);
 }
+
+[contenteditable] {
+  background-color: rgba(200, 200, 180, 0.4);
+  border-radius: 2px;
+  border-style: dotted;
+  border-width: 1px;
+  border-color: gray;
+}
